syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/kms-qwe/microservices_course_chat-server/app/pkg/chat_V1;chat_v1";

service ChatV1{
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMassage(SendMassageRequest) returns (google.protobuf.Empty);
}

message Message{
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMassageRequest {
    Message message = 1;
}